--- a/Practica4/Ejercicio/estilo.css
+++ b/Practica4/Ejercicio/estilo.css
@@ -39,8 +39,7 @@
 	display: none;
 }
 
-.conexiones {
-	display: table-cell;
+.conexiones, .historico {
 	border: 1px solid black;
 	padding: 20px 50px 20px 50px;
 	background: #ddd;
